test/compile-fail/resolution/use/global-in-prefixed-group/top.rhdl
mod a { }
use a::{ ::b::c };
